--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -100,6 +100,7 @@
   "registration": {
     "placeholders": {
       "e-mail": "Пошта",
+      "phone": "Номер телефона",
       "firstname": "Ім'я",
       "password": "Пароль",
       "confirmpassword": "Підтвердити пароль"
@@ -111,8 +112,19 @@
     "password": {
       "notequal": "паролі повинні співпадати",
       "short": "пароль має бути не менше 6-ти символів",
-      "required": "це поле не може бути пустим"
+      "required": "це поле не може бути пустим",
+      "no_space": "пробіли не дозволяються",
+      "at_least_seven": "щонайменше 7 символів",
+      "max_tt": "максимум 32 символи",
+      "passwords_match": "паролі повінні співпадати"
     },
+
+    "email": {
+      "email_match": "пошта повинна бути в форматі mail@mail.com",
+      "at_least_five": "щонайменше 5 символів",
+      "required_field": "email обов'язкове поле"
+    },
+
     "status": {
       "success": "Реєстрація успішна!",
       "error": "Користувач з такою поштою вже зареєстрований"
