--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -113,7 +113,6 @@
     "password": {
       "notequal": "паролі повинні співпадати",
       "short": "пароль має бути не менше 6-ти символів",
-      "required": "це поле не може бути пустим",
       "no_space": "пробіли не дозволяються",
       "at_least_seven": "щонайменше 7 символів",
       "max_tt": "максимум 32 символи",
@@ -126,12 +125,22 @@
       "required_field": "email обов'язкове поле"
     },
 
+    "phone": {
+      "invalid_phone_number": "Невірний формат номеру (+380111111111)"
+    },
+
+    "name": {
+      "only_cyrillic_latin": "Тільки кирилиця"
+    },
+
     "status": {
       "success": "Реєстрація успішна!",
       "error": "Користувач з такою поштою вже зареєстрований"
     },
     "required": {
       "name": "це поле не може бути пустим",
+      "phone": "це поле не може бути пустим",
+      "password": "це поле не може бути пустим",
       "repeated_password": "це поле не може бути пустим"
     }
   },
