--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -159,6 +159,16 @@
       "password": "Пароль"
     }
   },
+
+  "logout": {
+    "status": {
+      "success": "Ви вийшли!",
+      "error": "Сталася помилка. Спробуйте ще раз"
+    },
+    "buttons": {
+      "logout": "ВИХІД"
+    }
+  },
   "errorPage": {
     "message": "Такої сторінуи не існує. Повернутися на ",
     "home": "Головну",
@@ -214,6 +224,7 @@
     "wallet": "Wallet підтвердження",
     "confirm": "Справді хочете вийти?",
     "cancel": "Відміна",
-    "exit": "Вийти"
+    "exit": "Вийти",
+    "accaunt": "Аккаунт"
   }
 }
