--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -116,7 +116,8 @@
       "no_space": "пробіли не дозволяються",
       "at_least_seven": "щонайменше 7 символів",
       "max_tt": "максимум 32 символи",
-      "passwords_match": "паролі повінні співпадати"
+      "passwords_match": "паролі повінні співпадати",
+      "required": "поле пароль обов'язкове"
     },
 
     "email": {
