--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -1,4 +1,5 @@
 {
+  "wellcome": "Ласкаво просимо,",
   "noTransactionText": "У вас немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
   "date": "Дата",
   "type": "Тип",
@@ -136,7 +137,7 @@
 
     "status": {
       "success": "Реєстрація успішна!",
-      "error": "Користувач з такою поштою вже зареєстрований"
+      "error": "Будь-ласка заповнить всі поля"
     },
     "required": {
       "name": "це поле не може бути пустим",
