--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -220,7 +220,8 @@
     "sure": "Ви впевнені?",
     "irrevertable": "Транзакцію неможливо відновити після видалення",
     "delete": "Видалити",
-    "cancel": "Відмінити"
+    "cancel": "Відмінити",
+    "notify": "Транзакція видалена"
   },
   "exitprompt": {
     "wallet": "Wallet підтвердження",
