--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -1,4 +1,17 @@
 {
+  "userData": {
+    "My_information": "Інформація",
+    "Want_leave": "Ви дійсно бажаєте вийти?",
+    "Delete_user": "Видалити користувача",
+    "Deleted_user": "Користувач видалений",
+    "Want_delete": "Ви дійсно бажаєте видалити користувача? Ваші транзакції також будуть видалені.",
+    "Yes": "Так",
+    "No": "Ні",
+    "Confirm": "Користувач був видалений",
+    "Notify": "Фото обране",
+    "Edit_photo": "Замінити аватар",
+    "Photo_selected": "Аватар обраний"
+  },
   "wellcome": "Ласкаво просимо,",
   "noTransactionText": "У вас немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
   "date": "Дата",
