--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -12,6 +12,13 @@
     "Edit_photo": "Замінити аватар",
     "Photo_selected": "Аватар обраний"
   },
+  "categoryData": {
+    "title": "Ваші категорії",
+    "color": "Колір",
+    "name": "Назва",
+    "type": "Тип",
+    "delete": "Видалити"
+  },
   "wellcome": "Ласкаво просимо,",
   "noTransactionText": "У вас немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
   "date": "Дата",
