--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -1,6 +1,6 @@
 {
   "userData": {
-    "My_information": "Інформація",
+    "My_information": "Інформація про користувача",
     "Want_leave": "Ви дійсно бажаєте вийти?",
     "Delete_user": "Видалити користувача",
     "Deleted_user": "Користувач видалений",
@@ -10,14 +10,29 @@
     "Confirm": "Користувач був видалений",
     "Notify": "Фото обране",
     "Edit_photo": "Замінити аватар",
-    "Photo_selected": "Аватар обраний"
+    "Photo_selected": "Аватар обраний",
+    "items": {
+      "name": "Ім'я",
+      "email": "Емейл",
+      "phone": "Телефон"
+    }
   },
   "categoryData": {
-    "title": "Ваші категорії",
+    "title": "Категорії",
     "color": "Колір",
     "name": "Назва",
     "type": "Тип",
-    "delete": "Видалити"
+    "delete": "Видалити",
+    "form": {
+      "title": "Додати категорію",
+      "nameUk": "українська",
+      "nameEn": "англійська",
+      "color": "Оберіть колір категорії"
+    },
+    "notify": {
+      "success": "Категорію додано",
+      "delete": "Категорію видалено"
+    }
   },
   "wellcome": "Ласкаво просимо,",
   "noTransactionText": "У вас немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
@@ -116,7 +131,8 @@
   },
   "navigation": {
     "home": "Головна",
-    "statistics": "Статистика"
+    "statistics": "Статистика",
+    "account": "Кабінет користувача"
   },
   "registration": {
     "Signup_with_Google": "Зареєструйтесь з Google",
