--- a/src/locale/uk/translation.json
+++ b/src/locale/uk/translation.json
@@ -30,6 +30,7 @@
       "color": "Оберіть колір категорії"
     },
     "notify": {
+      "noyet": "У вас немає жодних Категорій. Натисніть кнопку Додати щоб розпочати.",
       "success": "Категорію додано",
       "delete": "Категорію видалено"
     }
